Data_Science_&_Data_Analytics.ipynb

--- a/Task_1_Data_Science_&_Data_Analytics.ipynb
+++ b/Task_1_Data_Science_&_Data_Analytics.ipynb
@@ -20,7 +20,7 @@
         "# **TASK 1 - Prediction using Supervised ML**\n",
         "**To Predict the percentage of marks of the students based on the number of hours they studied**\n",
         "\n",
-        "# **Author - Pratham Raka**"
+        "# **Author - Ashish Ruke**"
       ],
       "metadata": {
         "id": "uW4ns6CfVuLY"
